# responsible-maintenance

./: Makefile  README.md  dashboard.mds  setup.cfg
src/responsible_maintenance/: __main__.py  main.py
src/tests/: __init__.py  test_main.py
static/: README.md  dashboard.html  dashboard.mds  dashboardTypes.smd  index.html
static/example/: example.json
static/test/: index.html  testDashboard.mds
test/: index.html  runTests.mds  testDashboard.mds
