[metadata]
name = responsible-maintenance
version = 0.9.0
url = https://github.com/craigahobbs/responsible-maintenance
author = Craig A. Hobbs
author_email = craigahobbs@gmail.com
license = MIT
description = responsible-maintenance
long_description = file:README.md
long_description_content_type = text/markdown
keywords = responsible-maintenance
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Utilities

[options]
packages = responsible_maintenance
package_dir =
    = src

[options.entry_points]
console_scripts =
    responsible-maintenance = responsible_maintenance.main:main
